# biosimulator-processes

./: .THIS-IS-FOR-CONTAINER-DEV-ONLY  .gitignore  AUTHORS.md  ArchiveEditor.ipynb  Dockerfile  Dockerfile-base  README.md  __Dockerfile  _lock  commit.sh  comparator_result.txt  comparison_output.json  environment.base.yml  environment.yml  imgui.ini  main.ipynb  mem3dg_1.ipynb  meta.yaml  pip.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_ode_comparator_step_result.txt  test_sed4.ipynb  toml  wget-log
.github/workflows/: buildDockerImage.yaml  buildImage.yaml  cd.yaml  ci.yaml  fixNotebooks.yaml  pipeline.yml  pytest.yml
.vagrant/bundler/: global.sol
assets/config/: config.template.env
assets/experiments/: NOTES  ferroxidase_center.xyz
assets/scripts/: add_env_kernel.sh  build-container.sh  commit.sh  enter-lab.sh  fix-nb.sh  install-smoldyn-mac-silicon.sh  pypi_release.sh  release-container.sh  trust-notebooks.sh
bigraph_viz/: convert.py  plot_from_file.py
bio-compose-api/: api_data_model.py
bio-lab/: .gitignore  README.md  pyproject.toml
bio-lab/biolab/: __init__.py  biolab_data_model.py  main.py
bio-lab/biolab/ode_composition/: ode_workflow.py  workflow.py
bio_bundles/: data_generators.py  io.py
bio_bundles/data_model/: quantum.py
bio_bundles/processes/: qaoa_process.py
bio_bundles/quantum/: test_quantum.ipynb
bio_bundles/steps/: main_steps.py
biolab/: __init__.py  biolab_data_model.py  create_sbml.py  fetch_article.py  parse_article.py  pyproject.toml
biosimulator_processes/: Dockerfile  Dockerfile-base  __init__.py  biosimulator_builder.py  cobra_process.py  compare.py  container.py  copasi_process.py  data_model.py  exec.py  execute.py  helpers.py  instance.py  io.py  neuroml_functions.py  process_types.py  simulators.json  smoldyn_process.py  tellurium_process.py  utils.py
biosimulator_processes/api/: README.md  compare.py  instance.py  results.py  run.py  verify.py
biosimulator_processes/bigraph_schema/: __init__.py  data_model.py  registry.py  type_system.py
biosimulator_processes/bigraph_viz/: __init__.py  diagram.py  dict_utils.py  plot_old.py
biosimulator_processes/builder/: __init__.py  builder_api.py  toy_processes.py
biosimulator_processes/container/: container.py  exec.py  io.py
biosimulator_processes/container-assets/: Dockerfile-base  pyproject.toml
biosimulator_processes/containers/: exec.py  io.py
biosimulator_processes/data_model/: __init__.py  api_data_model.py  compare_data_model.py  sed_data_model.py  service_data_model.py  verify_data_model.py
biosimulator_processes/experiments/: parameter_optimization.py  parameter_scan.py  predict.py
biosimulator_processes/process_bigraph/: __init__.py  composite.py  emitter.py  protocols.py  tests.py
biosimulator_processes/processes/: __init__.py  _copasi_process.py  _copasi_process_experiment.py  amici_process.py  cobra_process.py  comparator_process.py  copasi_process.py  instance.py  qiskit_process.py  sed_process.py  smoldyn_process.py  tellurium_process.py  utc_process.py
biosimulator_processes/services/: rest_service.py
biosimulator_processes/steps/: bio_compose.py  comparator_step.py  get_sbml.py  neuron_network.py  ode_simulation.py  parameter_scan.py  simularium_step.py  (+1 more)
biosimulators_processes/: __init__.py  biosimulator_builder.py  execute.py  helpers.py  io.py  simulator_functions.py  wave_modulation.py
bsp/: __init__.py  builder.py  data_generators.py  implementations.py  io.py  registration.py  registry.py
compare_api/: README.md  datamodel.py  main.py
composer-api/: pyproject.toml
composer-api/composer_api/: main.py
composer-api/composer_api/pbg_analyst/: datamodel.py  main.py
composer-api/composer_api/pbg_analyst/speech/: datamodel.py
composer-api/specs/: biomodels-modelId.yaml  composer.yaml
composer-notebooks/: amici_process_composer.ipynb  cobra_process_composer.ipynb  copasi_process_composer.ipynb  playground.ipynb  tests.ipynb
container-assets/: Dockerfile
containers/: exec.py
data/: test_ode_comparator_step_result.json
demos/: BIOMD0000000744_url.xml  LEMS_example-single-izhikevich2007cell-sim.xml  biolab_api_demo.ipynb  comparison_api_demo.ipynb  compositions.ipynb  copasi_process_demo.ipynb  iz2007RS0.nml  izhikevich2007_single_cell_network.nml  mtor-signaling.xml  neuron.ipynb  nf1_model.xml  nf1_model_2.xml  notebook_api.ipynb  ode_process_demo.ipynb  output.json  process-api.py  process_comparison_demo.ipynb  sandbox.ipynb  single_cell_neuron.nml  test_suite_demo.ipynb  toy.ipynb  utc_process_comparison.ipynb  various.ipynb  verify_api_demo.ipynb
env/: pyvenv.cfg
hybrids/: dfba.ipynb  dfba_final.json  dfba_initial.json
notebook_api/: utc.py
notebooks/: biobuilder_api_demo.ipynb  biolab_api_demo.ipynb  builder_composer.ipynb  compose.ipynb  copasi_demo.ipynb  copasi_process.ipynb  copasi_process_composer.ipynb  data_model_demo.ipynb  datamodel_demo.ipynb  demo.ipynb  demo_compose.ipynb  low_level_demo.ipynb  parameter_scan.ipynb  playground.ipynb  prompted_composer.ipynb
release_env/: pyvenv.cfg
scripts/: build-container.sh  commit.sh  docker-pipeline.sh  exec-docker.sh  fix_notebooks.py  install-pbg-branches.sh  install-pg-branches.sh  install-smoldyn-mac-silicon.sh  install-with-smoldyn-for-mac-intel.sh  install-with-smoldyn-for-mac-silicon.sh  install-with-smoldyn.sh  pypi_release.sh  release-container.sh  release.sh  run-container.sh  run-docker.sh  trust-notebooks.sh
sed2/: core.py  processes.py  susceptible_zombie.csv  susceptible_zombie.xml
specs/: biomodels-complete.yaml  biomodels-modelId.yaml
test_outputs/: test_ode_comparator_step_result.json
test_suite/: README.md  config.py  dfba_sandbox.ipynb  exec_core.py  misc.ipynb  test.ipynb  test_composite.ipynb  test_data_model.py  test_dfba.ipynb  test_main.ipynb  utils.py
tests/: MinE.txt  __init__.py  mem3dg_1.ipynb  model.txt  test_comparator_process.py  test_copasi_process.py  test_smoldyn_process.py  test_tellurium_process.py
verify_api/: api_data_model.py  data_model.py  main.py
vm-singularity/: Vagrantfile
(+133 files in other folders)
