# PEP 621-compliant pyproject (env manager agnostic)

[project]
name = "biosimulator-processes"
version = "0.3.9"  # LATEST: latest stable is 0.3.8; LEGACY: latest stable pypi release: 0.1.2(biosimulator-processes) ... 0.2.5(as biosimulators-processes)
description = "Core implementations of process-bigraph.composite.Process aligning with BioSimulators simulator tools."
authors = [{name = "Alex Patrie", email = "alexanderpatrie@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4"
packages = [
    {include = "bsp"},
    {include = "tests"}
]
dependencies = [
    "process-bigraph>=0.0.23",
    "pip-autoremove",
    "seaborn>=0.13.2",
    "ipython>=8.31.0",
    "toml>=0.10.2",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "h5py>=3.12.1",
    "python-libsbml (>=5.20.4,<6.0.0)"
]


[project.optional-dependencies]
amici = ["amici (>=0.30.0,<0.31.0)"]
builder = ["bigraph-builder (>=0.0.4,<0.0.5)", "bigraph-viz (>=0.0.35,<0.0.36)"]
cobra = ["cobra (>=0.29.1,<0.30.0)", "imageio (>=2.36.1,<3.0.0)"]
copasi = ["copasi-basico (>=0.82,<0.83)"]
dev = ["pytest (>=8.3.4,<9.0.0)", "mypy (>=1.14.1,<2.0.0)", "flake8 (>=7.1.1,<8.0.0)", "pip-autoremove (>=0.10.0,<0.11.0)"]
quantum = ["qiskit[visualization] (>=1.3.1,<2.0.0)", "qiskit-ibm-runtime (>=0.34.0,<0.35.0)", "qiskit-nature (>=0.7.2,<0.8.0)", "pyscf (>=2.8.0,<3.0.0)"]
smoldyn = ["smoldyn (>=2.73,<3.0)", "simulariumio (>=1.11.0,<2.0.0)"]
tellurium = ["tellurium (>=2.2.10,<3.0.0)", "libroadrunner (>=2.7.0,<3.0.0)"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=setup.py"
python_files = "*.py"
